--- a/FastSocket/FastSocket.csproj
+++ b/FastSocket/FastSocket.csproj
@@ -5,8 +5,23 @@
     <Nullable>enable</Nullable>
     <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
 	  <LangVersion>12.0</LangVersion>
+	  <PackageId>FastSocket</PackageId>
+	  <Version>1.0.0</Version>
+	  <Authors>Skyqwe</Authors>
+	  <Description>FastSocket</Description>
+	  <PackageTags>Socket;Tcp;Udp</PackageTags>
+	  <PackageLicenseExpression>MIT</PackageLicenseExpression>
+	  <RepositoryUrl>https://github.com/jkh404/FastSocket</RepositoryUrl>
+	  <RepositoryType>git</RepositoryType>
+	  <PackageProjectUrl>https://github.com/jkh404/FastSocket</PackageProjectUrl>
+	  <PackageReleaseNotes>FastSocket is a communication library based on Tcp and Udp for networking. As its name suggests, it aims to be extremely fast, stable, and easy to use.</PackageReleaseNotes>
+	  <PackageReadmeFile>README.md</PackageReadmeFile>
   </PropertyGroup>
 	<ItemGroup>
-		<PackageReference Include="MemoryPack" Version="1.21.3" />
+		<PackageReference Include="MemoryPack" Version="1.21.4" />
+	</ItemGroup>
+	<ItemGroup>
+		<None Include="../README.md" pack="true" PackagePath="." />
+		<None Include="../README_ZH_CN.md" pack="true" PackagePath="." />
 	</ItemGroup>
 </Project>
