--- a/FastSocket/FastSocket.csproj
+++ b/FastSocket/FastSocket.csproj
@@ -5,10 +5,10 @@
     <Nullable>enable</Nullable>
     <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
 	  <LangVersion>12.0</LangVersion>
-	  <PackageId>FastSocket</PackageId>
+	  <PackageId>Sky.FastSocket</PackageId>
 	  <Version>1.0.0</Version>
 	  <Authors>Skyqwe</Authors>
-	  <Description>FastSocket</Description>
+	  <Description>Sky.FastSocket</Description>
 	  <PackageTags>Socket;Tcp;Udp</PackageTags>
 	  <PackageLicenseExpression>MIT</PackageLicenseExpression>
 	  <RepositoryUrl>https://github.com/jkh404/FastSocket</RepositoryUrl>
